update readme and add profile configuration test stage and prod