@@ -11,10 +11,46 @@ Spring Boot (Java 8)
 * [Lombok](https://projectlombok.org/)
 * [Swagger](http://swagger.io/)
 
+### Initialize DB once time
+
+    DROP DATABASE IF EXISTS pos;
+    CREATE DATABASE pos CHARACTER SET 'utf8' COLLATE 'utf8_general_ci';
+    USE pos;
+
+    DROP USER 'pos'@'localhost';
+    CREATE USER 'pos'@'localhost' IDENTIFIED BY 'DrQi3kclsqO4v';
+    GRANT  ALL PRIVILEGES ON pos.* TO 'pos'@'localhost';
+    
 ### Run
 
 	$ ./gradlew bootRun
 
+### deployment jar with profile on server
+    $ java -jar -DSpring.profiles.active=TEST|STAGE|PROD  app.jar
+    
+     more customization 
+    
+    $java -server\
+         -Xms256m\
+         -Xmx512m\
+         -XX:MaxMetaspaceSize=256m\
+         -XX:SurvivorRatio=8\
+         -XX:+UseConcMarkSweepGC\
+         -XX:+CMSParallelRemarkEnabled\
+         -XX:+UseCMSInitiatingOccupancyOnly\
+         -XX:CMSInitiatingOccupancyFraction=70\
+         -XX:+ScavengeBeforeFullGC\
+         -XX:+CMSScavengeBeforeRemark\
+         -XX:+PrintGCDateStamps\
+         -Dsun.net.inetaddr.ttl=180\
+         -XX:+HeapDumpOnOutOfMemoryError\
+         -jar\
+         /opt/pos-backend/active-version/app.jar\
+         --spring.profiles.active=TEST\
+         --server.port=8080\
+
+    
+    
 ### Create Flyway Patch
 
 	$ ./gradlew createFlywayPatch
@@ -34,12 +70,4 @@ Spring Boot (Java 8)
 	Enable hot reloading, so every time we make a change in our 
 	files an application restart will be triggered automatically
 
-### Initialize DB 
 
-	DROP DATABASE IF EXISTS pos;
-	CREATE DATABASE pos CHARACTER SET 'utf8' COLLATE 'utf8_general_ci';
-	USE pos;
-
-	DROP USER 'pos'@'localhost';
-	CREATE USER 'pos'@'localhost' IDENTIFIED BY 'DrQi3kclsqO4v';
-	GRANT  ALL PRIVILEGES ON pos.* TO 'pos'@'localhost';
